==> VasanthR6899/Rapid-IoT-Prototyping-using-Micropython/firmware/src/same54p20a_mp/machine_pin.c <==
#include "py/runtime.h"
#include "board.h"
#include "extmod/virtpin.h"
#include "py/mphal.h"
#include "modmachine.h"
#include "definitions.h"
#include "port/same54p20a/same54p20a_gpio.h"
#include "shared/runtime/mpirq.h"
#define GPIO_NUM_8 8
#define GPIO_NUM_9 9
#define GPIO_NUM_10 10
#define GPIO_NUM_11 11
#define GPIO_NUM_12 12
#define GPIO_NUM_13 13
#define GPIO_NUM_14 14
#define GPIO_NUM_15 15
#define GPIO_NUM_16 16
#define GPIO_NUM_17 17
#define GPIO_NUM_18 18
#define GPIO_NUM_34 34
#define GPIO_NUM_35 35
#define GPIO_NUM_41 41
#define GPIO_NUM_42 42
#define GPIO_NUM_44 44
#define GPIO_NUM_45 45
#define GPIO_NUM_46 46
#define GPIO_NUM_47 47
#define GPIO_NUM_48 48
#define GPIO_NUM_49 49
#define GPIO_NUM_72 72
#define GPIO_NUM_122 122
#define GPIO_MODE_IN (0)
#define GPIO_MODE_OUT (1)
#define GPIO_MODE_OPEN_DRAIN (2)
#define GPIO_PULL_UP (0)
#define GPIO_PULL_DOWN (1)
#define GPIO_PIN_INTR_NEGEDGE (0)
#define GPIO_PIN_INTR_POSEDGE (1)
#define GPIO_PIN_INTR_LOLEVEL (2)
#define GPIO_PIN_INTR_HILEVEL (3)

STATIC mp_obj_t machine_pin_call(mp_obj_t self_in, size_t n_args, size_t n_kw, const mp_obj_t *args) {
    mp_arg_check_num(n_args, n_kw, 0, 1, false);
    machine_pin_obj_t *self = self_in;
    
    if (n_args == 0) {
        // get pin
        return MP_OBJ_NEW_SMALL_INT(gpio_get_level(self->port, self->pin));
    } else {
        // set pin
        gpio_put(self->port, self->pin, mp_obj_is_true(args[0]));
        return mp_const_none;
    }
}

STATIC mp_obj_t machine_pin_obj_init_helper(const machine_pin_obj_t *self, size_t n_args, const mp_obj_t *pos_args, mp_map_t *kw_args) {
    enum { ARG_mode, ARG_pull, ARG_value };
    static const mp_arg_t allowed_args[] = {
        { MP_QSTR_mode, MP_ARG_OBJ, {.u_obj = mp_const_none}},
        { MP_QSTR_pull, MP_ARG_OBJ, {.u_obj = MP_OBJ_NEW_SMALL_INT(-1)}},
        { MP_QSTR_value, MP_ARG_KW_ONLY | MP_ARG_OBJ, {.u_obj = MP_OBJ_NULL}},
    };

    // parse args
    mp_arg_val_t args[MP_ARRAY_SIZE(allowed_args)];
    mp_arg_parse_all(n_args, pos_args, kw_args, MP_ARRAY_SIZE(allowed_args), allowed_args, args);

    // configure mode
    if (args[ARG_mode].u_obj != mp_const_none) {
        mp_int_t mode = mp_obj_get_int(args[ARG_mode].u_obj);
        if (mode == GPIO_MODE_IN) {
            gpio_set_dir(self->port, self->pin, GPIO_MODE_IN);
        } else if (mode == GPIO_MODE_OUT) {
            gpio_set_dir(self->port, self->pin, GPIO_MODE_OUT);
        } else if (mode == GPIO_MODE_OPEN_DRAIN) {
            //To do
        } else {
            // Alternate function.
        }
    }

    // set initial value (do this before configuring mode/pull)
    if (args[ARG_value].u_obj != MP_OBJ_NULL) {
        gpio_put(self->port, self->pin, mp_obj_is_true(args[ARG_value].u_obj));
    }

    return mp_const_none;
}

STATIC mp_obj_t machine_pin_off(mp_obj_t self_in) {
    machine_pin_obj_t *self = MP_OBJ_TO_PTR(self_in);
    if(LED_STATUS_PRINT)
    SYS_CONSOLE_PRINT ("LED on  (Pin PC%u off)\r\n", self->pin);
#ifdef SAME54P20A_DEBUG   
    SYS_CONSOLE_PRINT("machine_pin_off Pin(%u)\r\n", self->id);
#endif    
    gpio_put(self->port, self->pin, 0);
    return mp_const_none;
}

STATIC mp_obj_t machine_pin_on(mp_obj_t self_in) {
    machine_pin_obj_t *self = MP_OBJ_TO_PTR(self_in);
    if(LED_STATUS_PRINT)
    SYS_CONSOLE_PRINT ("LED off (Pin PC%u on)\r\n", self->pin);
#ifdef SAME54P20A_DEBUG 
    SYS_CONSOLE_PRINT("machine_pin_on Pin(%u)\r\n", self->id);
#endif
    gpio_put(self->port, self->pin, 1);
    return mp_const_none;
}
