==> jferreir/micropython/ports/xmc/modules/machine/machine_pin.c <==
#include <stdio.h>
#include <string.h>
#include "xmc_gpio.h"
#include "py/runtime.h"
#include "py/mphal.h"
#include "mphalport.h"
#include "modmachine.h"
#include "extmod/virtpin.h"
#include "pins.h"

STATIC mp_obj_t machine_pin_obj_init_helper(machine_pin_obj_t *self, size_t n_args, const mp_obj_t *pos_args, mp_map_t *kw_args) {
    enum { ARG_mode, ARG_pull, ARG_value, ARG_drive };
    static const mp_arg_t allowed_args[] = {
        { MP_QSTR_mode,  MP_ARG_REQUIRED | MP_ARG_INT },
        { MP_QSTR_pull,  MP_ARG_OBJ,                  {.u_obj = mp_const_none}},
        { MP_QSTR_value, MP_ARG_KW_ONLY | MP_ARG_OBJ, {.u_obj = MP_OBJ_NULL}},
        { MP_QSTR_drive, MP_ARG_KW_ONLY | MP_ARG_OBJ, {.u_obj = mp_const_none}},
    };

    // parse args
    mp_arg_val_t args[MP_ARRAY_SIZE(allowed_args)];
    mp_arg_parse_all(n_args, pos_args, kw_args, MP_ARRAY_SIZE(allowed_args), allowed_args, args);

    // get io mode
    XMC_GPIO_MODE_t mode = args[ARG_mode].u_int;

    if (mode == XMC_GPIO_MODE_INPUT_TRISTATE)
    {
      // get pull mode
      if (args[ARG_pull].u_obj != mp_const_none) {
          mode = mp_obj_get_int(args[ARG_pull].u_obj);
      }
    }

    XMC_GPIO_OUTPUT_LEVEL_t output_level = XMC_GPIO_OUTPUT_LEVEL_LOW;
    // get initial value
    if (args[ARG_value].u_obj != MP_OBJ_NULL) {
        output_level = mp_obj_is_true(args[ARG_value].u_obj) ? XMC_GPIO_OUTPUT_LEVEL_HIGH : XMC_GPIO_OUTPUT_LEVEL_LOW;
    }

    XMC_GPIO_OUTPUT_STRENGTH_t output_strength = XMC_GPIO_OUTPUT_STRENGTH_MEDIUM;
    if (args[ARG_drive].u_obj != mp_const_none) {
      output_strength = mp_obj_get_int(args[ARG_drive].u_obj);
    }

    XMC_GPIO_CONFIG_t gpio_config;
    gpio_config.mode = mode;
    gpio_config.output_level = output_level;
    gpio_config.output_strength = output_strength;
    XMC_GPIO_Init(self->port, self->pin, &gpio_config);

    return mp_const_none;
}

STATIC mp_obj_t machine_pin_call(mp_obj_t self_in, size_t n_args, size_t n_kw, const mp_obj_t *args) {
    mp_arg_check_num(n_args, n_kw, 0, 1, false);
    machine_pin_obj_t *self = self_in;
    if (n_args == 0) {
        uint32_t pin_val = XMC_GPIO_GetInput(self->port, self->pin);
        return MP_OBJ_NEW_SMALL_INT(pin_val);
    } else {
        XMC_GPIO_SetOutputLevel(self->port, self->pin, mp_obj_is_true(args[0]) ? XMC_GPIO_OUTPUT_LEVEL_HIGH : XMC_GPIO_OUTPUT_LEVEL_LOW);
        return mp_const_none;
    }
}

STATIC mp_obj_t machine_pin_off(mp_obj_t self_in) {
    machine_pin_obj_t *self = self_in;
    (void)XMC_GPIO_SetOutputLevel(self->port, self->pin, XMC_GPIO_OUTPUT_LEVEL_LOW);
    return mp_const_none;
}

STATIC mp_obj_t machine_pin_on(mp_obj_t self_in) {
    machine_pin_obj_t *self = self_in;
    (void)XMC_GPIO_SetOutputLevel(self->port, self->pin, XMC_GPIO_OUTPUT_LEVEL_HIGH);
    return mp_const_none;
}
